infra/k8s/12-server-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-server-canary
  namespace: nexus
  labels:
    app: nexus-server
    track: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus-server
      track: canary
  template:
    metadata:
      labels:
        app: nexus-server
        track: canary
    spec:
      serviceAccountName: nexus-server-sa
      containers:
        - name: server
          image: nexus-server:v2.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu:  250m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-server-canary
  namespace: nexus
  labels:
    app: nexus-server
    track: canary
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: nexus-server
    track: canary
