infra/k8s/21-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-web-service
  namespace: nexus
spec:
  type: ClusterIP
  selector:
    app: nexus-web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
